--- a/tutorials/W2_PyTorchDLN/W2_Tutorial1.ipynb
+++ b/tutorials/W2_PyTorchDLN/W2_Tutorial1.ipynb
@@ -6,8 +6,7 @@
       "name": "W2_Tutorial1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernel": {
       "display_name": "Python 3",
@@ -36,8 +35,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/CIS-522/course-content/blob/W2T1/tutorials/W2_PyTorchDLN/W2_Tutorial1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -1371,11 +1369,11 @@
         "id": "kStiWOy2_qbA"
       },
       "source": [
-        "Generally, *regression* refers to a set of methods for modeling the relationship between one or more independent variables and one or more dependent variables. Commonly, regression is applied when we want to find the relationship between the dependent and the independent variables. For example, if we want to examine the relative impacts of age, gender, and diet (the independent variables) on height (the dependnent variable). On the other hand, regression can be used for predicitive analysis, thus the independnet variables are also called predictors. When the model contains more than one predictors then the method is called *multiple regression*, and if contains more that one dependent variables it is called *multivariate regression*.\n",
+        "Generally, *regression* refers to a set of methods for modeling the relationship between one or more independent variables and one or more dependent variables. Commonly, regression is applied when we want to find the relationship between the dependent and the independent variables. For example, if we want to examine the relative impacts of age, gender, and diet (the independent variables) on height (the dependent variable). On the other hand, regression can be used for predicitive analysis, thus the independent variables are also called predictors. When the model contains more than one predictors then the method is called *multiple regression*, and if contains more that one dependent variables it is called *multivariate regression*.\n",
         "\n",
         "Regression problems pop up whenever we want to predict a numerical (usually continuous) value.\n",
         "\n",
-        "The independent variables are collected in a vector $\\mathbf{x} \\in \\mathbb{R}^D$, where $D$ denotes the number of independnet variables. Each variable influences differently the dependent variable by a weight factor, $w_{d}$. Thus, $\\mathbf{w} \\in \\mathbb{R}^D$.\n",
+        "The independent variables are collected in a vector $\\mathbf{x} \\in \\mathbb{R}^D$, where $D$ denotes the number of independent variables. Each variable influences differently the dependent variable by a weight factor, $w_{d}$. Thus, $\\mathbf{w} \\in \\mathbb{R}^D$.\n",
         "\n",
         "The multiple regression model can be written as\n",
         "\n",
@@ -1787,7 +1785,7 @@
         "  else:\n",
         "    print('LinAlgError. Matrix is Singular. No analytical solution.')\n",
         "\n",
-        "  return (parms)\n",
+        "  return (params)\n",
         "# tiny dataset\n",
         "alpha, beta = -2.0, 1.4\n",
         "xsynth = np.linspace(-1, 1, 10).reshape(-1, 1)  # 100 examples, in 10D space\n",
